# example

./: README.md  vscode CMake Tools 插件.md  vscode配置编译+debug.md  构建系统.md  编译系统.md
cmakeTools/: CMakeLists.txt
cmakeTools/include/tcp/: tcp.h
cmakeTools/main/: CMakeLists.txt  main.cpp
cmakeTools/tcp/: CMakeLists.txt  tcp.cpp
cmakeTools/udp/: CMakeLists.txt
group/: CMakeLists.txt
group/main/: main.cpp  main.h
group/sub1/: sub1.cpp  sub1.h
group/sub2/: sub2.cpp  sub2.h
task/: CMakeLists.txt
task/include/udp/: udp.h
task/main/: CMakeLists.txt  main.cpp
task/tcp/: CMakeLists.txt
task/udp/: CMakeLists.txt  udp.cpp
